--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: CompSci Blogs
 description: "August 2023 to June 2024"
-owner_name: Nighthawk Coders
-github_username: nighthawkcoders
-baseurl: "/student2"
+owner_name: DanteATech
+github_username: DanteATech
+baseurl: "/student"
 remote_theme: pages-themes/modernist@v0.2.0
 # remote_theme: pages-themes/dinky@v0.2.0
 # remote_theme: pages-themes/minimal@v0.2.0
