--- a/_data/compsci.yml
+++ b/_data/compsci.yml
@@ -14,7 +14,8 @@ Unit3:
   description: Final Project - Individual
   start: 8
   end: 8
-Unit4: 
-  title: tri 2
-  start: 9
-  start: 13
+Unit4:
+  title: 
+  description:
+  start: 15
+  end: 20
