--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,15 @@
-title: CompSci Blogs
+title: Ashwins_Fun_Blog
 description: "August 2023 to June 2024"
-owner_name: DanteATech
-github_username: DanteATech
-baseurl: "/student"
-remote_theme: pages-themes/modernist@v0.2.0
+owner_name: Ashwin
+github_username: Ashwinv93
+baseurl: "/CompSci"
+# remote_theme: pages-themes/midnight@v0.2.0
 # remote_theme: pages-themes/dinky@v0.2.0
 # remote_theme: pages-themes/minimal@v0.2.0
 # remote_theme: pages-themes/hacker@v0.2.0
 # remote_theme: pages-themes/cayman@v0.2.0
 # remote_theme: pages-themes/time-machine@v0.2.0
+remote_theme: pages-themes/modernist@v0.2.0
 plugins:
 - jekyll-remote-theme
 future: true
